# CmakeTest

./: .gitignore  README.md
CmakeTest/: CMakeLists.txt  CmakeTest.cpp  CmakeTest.h  CmakeTest.qrc  CmakeTest.ui  GLWidget.cpp  TimeThread.cpp  TimeThread.h  main.cpp
CmakeTest/QGraphicsViewSrc/: CMakeLists.txt  QColorItem.cpp  QColorItem.h  QGraphicsItemBasic.cpp  QGraphicsItemBasic.h  QGraphicsSceneBasic.cpp  QGraphicsSceneBasic.h  QGraphicsViewBasic.cpp  QGraphicsViewBasic.h  QGraphicsViewDemo.cpp  QGraphicsViewDemo.h  QGraphicsViewDemo.ui  QPointItem.cpp  QPointItem.h  main.cpp
CmakeTest/src/: CMakeLists.txt  CmakeTest.qrc  Config.h  GLWidget.h  NavigationDock.cpp  NavigationDock.h  TcpClient.cpp  TcpClient.h
MFCApplicationTest/: MFCApplicationTest.cpp  MFCApplicationTest.h  MFCApplicationTest.rc  MFCApplicationTest.sln  MFCApplicationTest.vcxproj  MFCApplicationTest.vcxproj.filters  MainUI.cpp  MainUI.h  moc_MainUI.cpp  qmfcapp.cpp  qmfcapp.h  untitledDLL.lib
test/: CMakeLists.txt
untitledDLL/: CMakeLists.txt  form1.h  form1.ui  untitleddll.cpp  untitleddll.h
